--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,19 +70,25 @@ jobs:
 
   test-frontend:
     docker:
-      # Docker image here
+       - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
-      # Restore from cache
-      # Your job code here
+      - checkout
+      - attach_workspace:
+          at: ~/
+      cd frontend
+      npm install
+      npm run test
 
   test-backend:
     docker:
-      # Docker image here
+      - image: circleci/node:13.8.0
     steps:
-      # Checkout code from git
-      # Restore from cache
-      # Your job code here
+      - checkout
+      - attach_workspace:
+          at: ~/
+      cd frontend
+      npm install
+      npm run test
 
   scan-frontend:
     docker:
