--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,7 +100,7 @@ jobs:
       cd frontend
 npm install
 # npm install oauth-sign@^0.9.0
-npm audit --audit-level=critical
+run: npm audit --audit-level=critical
 
   scan-backend:
     docker:
@@ -112,7 +112,7 @@ npm audit --audit-level=critical
   cd frontend
 npm install
 # npm install oauth-sign@^0.9.0
-npm audit --audit-level=critical
+run: npm audit --audit-level=critical
 
   deploy-infrastructure:
     docker:
