--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "postcss-reporter": "^6.0.1",
     "postcss-url": "^8.0.0",
     "prettier": "^1.18.2",
+    "standard-version": "^7.0.0",
     "react-hot-loader": "^4.12.5",
     "react-test-renderer": "^16.8.6",
     "redux-devtools-extension": "^2.13.8",
@@ -79,6 +80,7 @@
     "axios": "^0.19.0",
     "axui-contextmenu": "^0.4.0",
     "classnames": "^2.2.6",
+    "class-validator": "0.12.2",
     "connected-react-router": "^4.5.0",
     "dotenv": "^8.0.0",
     "dotenv-webpack": "^1.7.0",
