--- a/.circleci/files/frontend.yml
+++ b/.circleci/files/frontend.yml
@@ -1,34 +1,37 @@
 Description: >
-  UdaPeople frontend stack.
-
+  Cloudfront distribution for UdaPeople.
 Parameters:
   ID:
     Description: Unique identifier.
     Type: String
 
 Resources:
-  WebsiteBucket:
-    Type: AWS::S3::Bucket
+  CloudFrontOriginAccessIdentity:
+    Type: "AWS::CloudFront::CloudFrontOriginAccessIdentity"
     Properties:
-      BucketName: !Sub "udapeople-${ID}"
-      AccessControl: PublicRead
-      WebsiteConfiguration:
-        IndexDocument: index.html
-        ErrorDocument: 404.html
-  
-  WebsiteBucketPolicy:
-    Type: AWS::S3::BucketPolicy
+      CloudFrontOriginAccessIdentityConfig:
+        Comment: Origin Access Identity for Serverless Static Website
+
+  WebpageCDN:
+    Type: AWS::CloudFront::Distribution
     Properties:
-      Bucket: !Ref 'WebsiteBucket'
-      PolicyDocument:
-        Statement:
-        - Sid: PublicReadForGetBucketObjects
-          Effect: Allow
-          Principal: '*'
-          Action: s3:GetObject
-          Resource: !Join ['', ['arn:aws:s3:::', !Ref 'WebsiteBucket', /*]]
+      DistributionConfig:
+        Origins:
+          - DomainName: !Sub "udapeople-${ID}.s3.amazonaws.com"
+            Id: webpage
+            S3OriginConfig:
+              OriginAccessIdentity: !Sub "origin-access-identity/cloudfront/${CloudFrontOriginAccessIdentity}"
+        Enabled: True
+        DefaultRootObject: index.html
+        DefaultCacheBehavior:
+          ForwardedValues:
+            QueryString: False
+          TargetOriginId: webpage
+          ViewerProtocolPolicy: allow-all
 
 Outputs:
-  WebsiteURL:
-    Value: !GetAtt WebsiteBucket.WebsiteURL
-    Description: URL for website hosted on S3
+  BucketIdSuffix:
+    Value: !Sub ${ID}
+    Description: The id of the workflow. This is used to clean up resources when a new deployment is made.
+    Export:
+      Name: UdapeopleWorkflowID
