--- a/.circleci/files/frontend.yml
+++ b/.circleci/files/frontend.yml
@@ -1,37 +1,33 @@
 Description: >
-  Cloudfront distribution for UdaPeople.
+  UdaPeople frontend stack.
 Parameters:
   ID:
     Description: Unique identifier.
     Type: String
 
 Resources:
-  CloudFrontOriginAccessIdentity:
-    Type: "AWS::CloudFront::CloudFrontOriginAccessIdentity"
+  WebsiteBucket:
+    Type: AWS::S3::Bucket
     Properties:
-      CloudFrontOriginAccessIdentityConfig:
-        Comment: Origin Access Identity for Serverless Static Website
+      BucketName: !Sub "udapeople-${ID}"
+      AccessControl: PublicRead
+      WebsiteConfiguration:
+        IndexDocument: index.html
+        ErrorDocument: 404.html
 
-  WebpageCDN:
-    Type: AWS::CloudFront::Distribution
+  WebsiteBucketPolicy:
+    Type: AWS::S3::BucketPolicy
     Properties:
-      DistributionConfig:
-        Origins:
-          - DomainName: !Sub "udapeople-${ID}.s3.amazonaws.com"
-            Id: webpage
-            S3OriginConfig:
-              OriginAccessIdentity: !Sub "origin-access-identity/cloudfront/${CloudFrontOriginAccessIdentity}"
-        Enabled: True
-        DefaultRootObject: index.html
-        DefaultCacheBehavior:
-          ForwardedValues:
-            QueryString: False
-          TargetOriginId: webpage
-          ViewerProtocolPolicy: allow-all
+      Bucket: !Ref 'WebsiteBucket'
+      PolicyDocument:
+        Statement:
+          - Sid: PublicReadForGetBucketObjects
+            Effect: Allow
+            Principal: '*'
+            Action: s3:GetObject
+            Resource: !Join ['', ['arn:aws:s3:::', !Ref 'WebsiteBucket', /*]]
 
 Outputs:
-  BucketIdSuffix:
-    Value: !Sub ${ID}
-    Description: The id of the workflow. This is used to clean up resources when a new deployment is made.
-    Export:
-      Name: UdapeopleWorkflowID
+  WebsiteURL:
+    Value: !GetAtt WebsiteBucket.WebsiteURL
+    Description: URL for website hosted on S3
